crates/agent/tests/snapshots/prompt_golden__slot_patch_append_prepend_override_elide.snap
---
source: crates/agent/tests/prompt_golden.rs
expression: snapshot
---
[
    GoldenItem {
        index: 0,
        band: "stable",
        text: "replacement",
    },
    GoldenItem {
        index: 1,
        band: "epochal",
        text: "pre-base-post",
    },
]
